--- a/SQL_autentifikace_pro_shibboleth_v.1
+++ b/SQL_autentifikace_pro_shibboleth_v.1
@@ -1,4 +1,5 @@
 # Autentifikace Shibbolethu proti mysql databázi
+
 ## předpokládejme tabulku v mysql
 
 ```
@@ -10,4 +11,13 @@ mysql> show fields from  user;
 | pass  | varchar(255) | YES  |     | NULL    |       |
 +-------+--------------+------+-----+---------+-------+
 ```
+
+Návod vychází z http://shibboleth.1660669.n2.nabble.com/IdP-user-authendication-using-mysql-user-table-td7620120.html.
+
+Stahneme z 
+```  
+https://github.com/tauceti2/jaas-rdbms
+```
+
+A vytvoříme soubor `tagishauth.jar`
 
